# Python-web-automation

./: README.md  pyproject.toml
tests/: test_login.py
