[tool.poetry]
name = "python-web-automation"
version = "0.1.0"
description = ""
authors = ["Shirley Kidman <shirley.kidman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyleniumio = "^1.15.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"